KRACOEUS-6955 : common budget -- moved action classes