@@ -13,17 +13,20 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package org.kuali.kra.budget.web.struts.action;
+package org.kuali.coeus.common.budget.impl.core;
 
 import org.apache.commons.lang3.StringUtils;
 import org.apache.struts.action.ActionForm;
 import org.apache.struts.action.ActionForward;
 import org.apache.struts.action.ActionMapping;
+import org.kuali.coeus.common.budget.framework.core.*;
+import org.kuali.coeus.common.budget.framework.core.BudgetAction;
+import org.kuali.coeus.sys.api.model.ScaleTwoDecimal;
+import org.kuali.coeus.sys.framework.controller.AuditActionHelper;
 import org.kuali.coeus.sys.framework.controller.StrutsConfirmation;
 import org.kuali.coeus.sys.framework.service.KcServiceLocator;
-import org.kuali.coeus.sys.api.model.ScaleTwoDecimal;
-import org.kuali.coeus.common.budget.framework.core.Budget;
-import org.kuali.coeus.common.budget.framework.core.BudgetDocument;
+import org.kuali.kra.award.budget.AwardBudgetForm;
+import org.kuali.kra.award.budget.AwardBudgetService;
 import org.kuali.coeus.common.budget.framework.nonpersonnel.BudgetLineItem;
 import org.kuali.coeus.common.budget.framework.period.AddBudgetPeriodEvent;
 import org.kuali.coeus.common.budget.framework.period.BudgetPeriod;
@@ -33,16 +36,15 @@ import org.kuali.coeus.common.budget.framework.rate.BudgetRatesService;
 import org.kuali.coeus.common.budget.framework.summary.BudgetSummaryService;
 import org.kuali.coeus.common.budget.framework.version.BudgetDocumentVersion;
 import org.kuali.coeus.common.budget.framework.version.BudgetVersionOverview;
-import org.kuali.coeus.common.budget.framework.core.BudgetForm;
 import org.kuali.kra.infrastructure.Constants;
 import org.kuali.kra.infrastructure.KeyConstants;
-import org.kuali.rice.krad.document.Document;
+import org.kuali.rice.kns.lookup.LookupResultsService;
+import org.kuali.rice.krad.bo.BusinessObject;
 import org.kuali.rice.krad.service.BusinessObjectService;
 import org.kuali.rice.krad.service.KualiRuleService;
 import org.kuali.rice.krad.util.ErrorMessage;
 import org.kuali.rice.krad.util.GlobalVariables;
 import org.kuali.rice.krad.util.MessageMap;
-import org.springframework.util.AutoPopulatingList;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
@@ -52,9 +54,10 @@ import static org.kuali.coeus.sys.framework.service.KcServiceLocator.getService;
 import static org.kuali.kra.infrastructure.KeyConstants.QUESTION_RECALCULATE_BUDGET_CONFIRMATION;
 import static org.kuali.rice.krad.util.KRADConstants.QUESTION_INST_ATTRIBUTE_NAME;
 
-public class BudgetSummaryAction extends BudgetAction {
+public class BudgetParametersAction extends BudgetAction {
     private static final String CONFIRM_RECALCULATE_BUDGET_KEY = "calculateAllPeriods";
     private static final String CONFIRM_SAVE_BUDGET_KEY = "saveAfterQuestion";
+    private static final String CONFIRM_GENERATE_ALL_PERIODS = "confirmGenerateAllPeriods";
     private static final String CONFIRM_HEADER_TAB_KEY = "headerTabAfterQuestion";
     private static final String DO_NOTHING = "doNothing";
     private static final String CONFIRM_SAVE_SUMMARY = "confirmSaveSummary";
@@ -69,11 +72,13 @@ public class BudgetSummaryAction extends BudgetAction {
         BudgetDocument budgetDocument = budgetForm.getBudgetDocument();
         Budget budget = budgetDocument.getBudget();
         updateTotalCost(budget);
-        getBudgetSummaryService().setupOldStartEndDate(
-                budget, false);
+        getBudgetSummaryService().setupOldStartEndDate(budget, false);
         if (StringUtils.isNotBlank(budgetForm.getSyncBudgetRate()) && budgetForm.getSyncBudgetRate().equals("Y")) {
+            budget.setRateClassTypesReloaded(true);
             getBudgetRatesService().syncAllBudgetRates(budgetDocument);
+            budget.setRateSynced(true);
             budgetForm.setSyncBudgetRate("");
+            // jira-1848 : force to calc budget after sync
             getBudgetSummaryService().calculateBudget(budget);
         }
         return forward;
@@ -87,77 +92,131 @@ public class BudgetSummaryAction extends BudgetAction {
 
     @Override
     public ActionForward save(ActionMapping mapping, ActionForm form, HttpServletRequest request, HttpServletResponse response)
-            throws Exception {
+        throws Exception {
         BudgetForm budgetForm = (BudgetForm) form;
         BudgetDocument budgetDocument = budgetForm.getBudgetDocument();
         Budget budget = budgetDocument.getBudget();
-
-        boolean rulePassed = getKualiRuleService().applyRules(
-                new SaveBudgetPeriodEvent(Constants.EMPTY_STRING, budgetForm.getBudgetDocument()));
-        if (!StringUtils.equalsIgnoreCase(budget.getOhRateClassCode(), budgetForm.getOhRateClassCodePrevValue())
-                || !StringUtils.equalsIgnoreCase(budget.getUrRateClassCode(), budgetForm.getUrRateClassCodePrevValue())) {
+        
+        boolean rulePassed = getKualiRuleService().applyRules(new SaveBudgetPeriodEvent(Constants.EMPTY_STRING, budgetForm.getBudgetDocument()));
+        
+        if (isRateTypeChanged(budgetForm)) {
             if (isBudgetPeriodDateChanged(budget) && isLineItemErrorOnly()) {
                 GlobalVariables.setMessageMap(new MessageMap());
                 return confirm(buildSaveBudgetSummaryConfirmationQuestion(mapping, form, request, response,
-                        KeyConstants.QUESTION_SAVE_BUDGET_SUMMARY_FOR_RATE_AND_DATE_CHANGE), CONFIRM_SAVE_SUMMARY, DO_NOTHING);
-            }
-            else {
+                                                                          KeyConstants.QUESTION_SAVE_BUDGET_SUMMARY_FOR_RATE_AND_DATE_CHANGE), CONFIRM_SAVE_SUMMARY, DO_NOTHING);
+            } else {
                 return confirm(buildRecalculateBudgetConfirmationQuestion(mapping, form, request, response),
-                        CONFIRM_SAVE_BUDGET_KEY, DO_NOTHING);
+                               CONFIRM_SAVE_BUDGET_KEY, DO_NOTHING);
             }
-        }
-        else {
+        } else {
+            // This whole else block is mostly the same as saveAfterQuestion, so why not use saveAfterQuestion here?
             updateThisBudgetVersion(budgetDocument);
             if (budgetForm.isUpdateFinalVersion()) {
                 reconcileFinalBudgetFlags(budgetForm);
-                setBudgetStatuses(budget.getBudgetDocument().getParentDocument());
+                setBudgetStatuses(budgetDocument.getParentDocument());
             }
-
             if (isBudgetPeriodDateChanged(budget) && isLineItemErrorOnly()) {
                 GlobalVariables.setMessageMap(new MessageMap());
                 return confirm(buildSaveBudgetSummaryConfirmationQuestion(mapping, form, request, response,
-                        KeyConstants.QUESTION_SAVE_BUDGET_SUMMARY), CONFIRM_SAVE_SUMMARY, "");
+                                                                          KeyConstants.QUESTION_SAVE_BUDGET_SUMMARY), CONFIRM_SAVE_SUMMARY, "");
             }
             if (rulePassed) {
                 // update campus flag if budget level flag is changed
                 if (StringUtils.isBlank(budgetForm.getPrevOnOffCampusFlag())
-                        || !budget.getOnOffCampusFlag().equals(budgetForm.getPrevOnOffCampusFlag())) {
+                    || !budget.getOnOffCampusFlag().equals(budgetForm.getPrevOnOffCampusFlag())) {
                     KcServiceLocator.getService(BudgetSummaryService.class).updateOnOffCampusFlag(budget,
-                            budget.getOnOffCampusFlag());
+                                                                                                   budget.getOnOffCampusFlag());
                 }
-                if (budget.getFinalVersionFlag()) {
-                    budget.getBudgetDocument().getParentDocument().getBudgetParent().setBudgetStatus(budget.getBudgetStatus());
+                boolean valid = true;
+                if (Boolean.valueOf(budgetDocument.getProposalBudgetFlag())) {
+                    valid = isValidToComplete(budgetDocument.getParentDocument());
+                    int errorSize = GlobalVariables.getMessageMap().getErrorMessages().size();
+                    final BudgetTDCValidator tdcValidator = new BudgetTDCValidator(request);
+                    tdcValidator.validateGeneratingErrorsAndWarnings(budgetDocument.getParentDocument());
+                    if (GlobalVariables.getMessageMap().getErrorMessages().size() > errorSize) {
+                        valid = false;
+                    }
                 }
-                updateBudgetPeriodDbVersion(budget);
-                return super.save(mapping, form, request, response);
+                if (budget.getFinalVersionFlag() && valid) {
+                    budgetDocument.getParentDocument().getBudgetParent().setBudgetStatus(budget.getBudgetStatus());
+                }
+                if (valid) {
+                    updateBudgetPeriodDbVersion(budget);
+                    return super.save(mapping, form, request, response);
+                } else {
+                    String budgetStatusIncompleteCode = this.getParameterService().getParameterValueAsString(
+                            BudgetDocument.class, Constants.BUDGET_STATUS_INCOMPLETE_CODE);
+                    budget.setBudgetStatus(budgetStatusIncompleteCode);
+
+                    if (form instanceof AwardBudgetForm) {
+                        new AuditActionHelper().setAuditMode(mapping, (AwardBudgetForm) form, true);
+                    } else {
+                        new AuditActionHelper().setAuditMode(mapping, (BudgetForm) form, true);
+                    }
+                    
+                    return mapping.findForward(Constants.BUDGET_ACTIONS_PAGE);
+                }
             }
         }
 
         return mapping.findForward(Constants.MAPPING_BASIC);
     }
 
+    private boolean isValidToComplete(BudgetParentDocument document) throws Exception {
+        boolean valid = KcServiceLocator.getService(BudgetService.class).validateBudgetAuditRuleBeforeSaveBudgetVersion(document);
+
+        if (!valid) {
+            GlobalVariables.getMessageMap().putError("document.budgetDocumentVersion[" + 0 + "].budgetVersionOverview.budgetStatus",
+                    KeyConstants.CLEAR_AUDIT_ERRORS_BEFORE_CHANGE_STATUS_TO_COMPLETE);
+        }
+        return valid;
+    }
+    
+    /**
+     * This method returns <CODE>true</CODE> if one of the two rate types has changed since the last save.
+     * @param budgetForm
+     * @return
+     */
+    private boolean isRateTypeChanged(BudgetForm budgetForm) {
+        BudgetDocument budgetDocument = budgetForm.getBudgetDocument();
+        Budget budget = budgetDocument.getBudget();
+        BudgetDocument originalBudgetDocument = (BudgetDocument) KcServiceLocator.getService(BusinessObjectService.class).retrieve(budgetDocument);
+        Budget originalBudget = originalBudgetDocument.getBudget();
+        
+        return (!StringUtils.equalsIgnoreCase(originalBudget.getOhRateClassCode(), budget.getOhRateClassCode())
+            || !StringUtils.equalsIgnoreCase(originalBudget.getUrRateClassCode(), budget.getUrRateClassCode()));
+    }
+    
     public ActionForward saveAfterQuestion(ActionMapping mapping, ActionForm form, HttpServletRequest request,
-            HttpServletResponse response) throws Exception {
+                                           HttpServletResponse response) throws Exception {
         BudgetForm budgetForm = (BudgetForm) form;
         BudgetDocument budgetDocument = budgetForm.getBudgetDocument();
         Budget budget = budgetDocument.getBudget();
 
-        updateThisBudgetVersion(budgetForm.getBudgetDocument());
+        // The following 3 lines are needed so the rate type is correctly propagated to the Personnel tab if
+        // the rate type was changed after a validation error occured. We might want to consider getting rid of
+        // ohRateClassCodePrevValue urRateClassCodePrevValue altogether in favor of using the BusinessObjectService
+        // as below.
+        BudgetDocument originalBudgetDocument = (BudgetDocument) KcServiceLocator.getService(BusinessObjectService.class).retrieve(budgetDocument);
+        budgetForm.setOhRateClassCodePrevValue(originalBudgetDocument.getBudget().getOhRateClassCode());
+        budgetForm.setUrRateClassCodePrevValue(originalBudgetDocument.getBudget().getUrRateClassCode());
+        
+        updateThisBudgetVersion(budgetDocument);
         if (budgetForm.isUpdateFinalVersion()) {
             reconcileFinalBudgetFlags(budgetForm);
-            setBudgetStatuses(budget.getBudgetDocument().getParentDocument());
+            setBudgetStatuses(budgetDocument.getParentDocument());
         }
         boolean rulePassed = getKualiRuleService().applyRules(
-                new SaveBudgetPeriodEvent(Constants.EMPTY_STRING, budgetForm.getBudgetDocument()));
+            new SaveBudgetPeriodEvent(Constants.EMPTY_STRING, budgetDocument));
         if (rulePassed) {
             // update campus flag if budget level flag is changed
             if (StringUtils.isBlank(budgetForm.getPrevOnOffCampusFlag())
-                    || !budget.getOnOffCampusFlag().equals(budgetForm.getPrevOnOffCampusFlag())) {
+                || !budget.getOnOffCampusFlag().equals(budgetForm.getPrevOnOffCampusFlag())) {
                 KcServiceLocator.getService(BudgetSummaryService.class).updateOnOffCampusFlag(budget,
-                        budget.getOnOffCampusFlag());
+                                                                                               budget.getOnOffCampusFlag());
             }
             if (budget.getFinalVersionFlag()) {
-                budget.getBudgetDocument().getParentDocument().getBudgetParent().setBudgetStatus(budget.getBudgetStatus());
+                budgetDocument.getParentDocument().getBudgetParent().setBudgetStatus(budget.getBudgetStatus());
             }
             updateBudgetPeriodDbVersion(budget);
             return super.save(mapping, form, request, response);
@@ -170,12 +229,18 @@ public class BudgetSummaryAction extends BudgetAction {
         BudgetForm budgetForm = (BudgetForm) form;
         BudgetDocument budgetDocument = budgetForm.getBudgetDocument();
         Budget budget = budgetDocument.getBudget();
-        updateThisBudgetVersion(budgetForm.getBudgetDocument());
+        if (isRateTypeChanged(budgetForm)) {
+            BudgetDocument originalBudgetDocument = (BudgetDocument) KcServiceLocator.getService(BusinessObjectService.class)
+                    .retrieve(budgetDocument);
+            budgetForm.setOhRateClassCodePrevValue(originalBudgetDocument.getBudget().getOhRateClassCode());
+            budgetForm.setUrRateClassCodePrevValue(originalBudgetDocument.getBudget().getUrRateClassCode());
+        }
+        updateThisBudgetVersion(budgetDocument);
         if (budgetForm.isUpdateFinalVersion()) {
             reconcileFinalBudgetFlags(budgetForm);
-            setBudgetStatuses(budget.getBudgetDocument().getParentDocument());
+            setBudgetStatuses(budgetDocument.getParentDocument());
         }
-        budget.getBudgetSummaryService().adjustStartEndDatesForLineItems(budget);
+        getBudgetSummaryService().adjustStartEndDatesForLineItems(budget);
         boolean rulePassed = getKualiRuleService().applyRules(
                 new SaveBudgetPeriodEvent(Constants.EMPTY_STRING, budgetForm.getBudgetDocument()));
         if (rulePassed) {
@@ -186,7 +251,7 @@ public class BudgetSummaryAction extends BudgetAction {
                         budget.getOnOffCampusFlag());
             }
             if (budget.getFinalVersionFlag()) {
-                budget.getBudgetDocument().getParentDocument().getBudgetParent().setBudgetStatus(budget.getBudgetStatus());
+                budgetDocument.getParentDocument().getBudgetParent().setBudgetStatus(budget.getBudgetStatus());
             }
             updateBudgetPeriodDbVersion(budget);
             return super.save(mapping, form, request, response);
@@ -207,19 +272,15 @@ public class BudgetSummaryAction extends BudgetAction {
     public ActionForward addBudgetPeriod(ActionMapping mapping, ActionForm form, HttpServletRequest request,
             HttpServletResponse response) throws Exception {
         BudgetForm budgetForm = (BudgetForm) form;
+        BudgetPeriod newBudgetPeriod = budgetForm.getNewBudgetPeriod();
         BudgetDocument budgetDocument = budgetForm.getBudgetDocument();
         Budget budget = budgetDocument.getBudget();
-        BudgetPeriod newBudgetPeriod = budgetForm.getNewBudgetPeriod();
-        // List<BudgetPeriod> budgetPeriods = budget.getBudgetPeriods();
         if (getKualiRuleService().applyRules(
                 new AddBudgetPeriodEvent(Constants.EMPTY_STRING, budgetForm.getBudgetDocument(), newBudgetPeriod))) {
-            budget.getBudgetSummaryService().addBudgetPeriod(budget, newBudgetPeriod);
+            getBudgetSummaryService().addBudgetPeriod(budget, newBudgetPeriod);
             /* set new period and calculate all periods */
             budgetForm.setNewBudgetPeriod(budget.getNewBudgetPeriod());
-            // TODO : per conversation with Geo. comment it out for now.
-            // calculate should get called only when you press calculate or while saving
-            // budget.getBudgetSummaryService().calculateBudget(budget);
-        }
+           }
         return mapping.findForward(Constants.MAPPING_BASIC);
     }
 
@@ -245,18 +306,15 @@ public class BudgetSummaryAction extends BudgetAction {
         }
         List <BudgetLineItem> budgetLineItems = budget.getBudgetPeriods().get(delPeriod).getBudgetLineItems();
         if (viewPeriod > 0 && ((delPeriod+1) == viewPeriod || budget.getBudgetPeriods().size() == viewPeriod)) {
-            budgetForm.setViewBudgetPeriod(new Integer(1));
+            budgetForm.setViewBudgetPeriod(Integer.valueOf(1));
         }
         if (budgetLineItems != null && budgetLineItems.size() > 0) {
             return confirm(buildDeleteBudgetPeriodConfirmationQuestion(mapping, form, request, response,
                      delPeriod+1), CONFIRM_DELETE_BUDGET_PERIOD, "");
         } else {
-//            if (getKualiRuleService().applyRules(
-//                    new DeleteBudgetPeriodEvent(Constants.EMPTY_STRING, budget, delPeriod))) {
                 getBudgetSummaryService().deleteBudgetPeriod(budget, delPeriod);
                 /* calculate all periods */
                 getBudgetSummaryService().calculateBudget(budget);
-//            }
             return mapping.findForward(Constants.MAPPING_BASIC);            
         }
     }
@@ -267,12 +325,9 @@ public class BudgetSummaryAction extends BudgetAction {
         BudgetDocument budgetDocument = budgetForm.getBudgetDocument();
         Budget budget = budgetDocument.getBudget();
         int delPeriod = getLineToDelete(request);
-//        if (getKualiRuleService().applyRules(
-//                new DeleteBudgetPeriodEvent(Constants.EMPTY_STRING, budget, delPeriod))) {
-            budget.getBudgetSummaryService().deleteBudgetPeriod(budget, delPeriod);
+        getBudgetSummaryService().deleteBudgetPeriod(budget, delPeriod);
             /* calculate all periods */
             getBudgetSummaryService().calculateBudget(budget);
-//        }
         return mapping.findForward(Constants.MAPPING_BASIC);
     }
 
@@ -308,30 +363,46 @@ public class BudgetSummaryAction extends BudgetAction {
      */
     public ActionForward generateAllPeriods(ActionMapping mapping, ActionForm form, HttpServletRequest request,
             HttpServletResponse response) throws Exception {
+//the rate type gets reset if there is a validation error. it shouldn't. 
+        ActionForward forward = mapping.findForward(Constants.MAPPING_BASIC);
+        
         BudgetForm budgetForm = (BudgetForm) form;
         boolean rulePassed = getKualiRuleService().applyRules(
                 new GenerateBudgetPeriodEvent(Constants.EMPTY_STRING, budgetForm.getBudgetDocument()));
-        BudgetDocument budgetDocument = budgetForm.getBudgetDocument();
-        Budget budget = budgetDocument.getBudget();
         if (rulePassed) {
-            if (StringUtils.isBlank(budgetForm.getPrevOnOffCampusFlag())
-                    || !budget.getOnOffCampusFlag().equals(budgetForm.getPrevOnOffCampusFlag())) {
-                KcServiceLocator.getService(BudgetSummaryService.class).updateOnOffCampusFlag(budget,
-                        budget.getOnOffCampusFlag());
+            if (isRateTypeChanged(budgetForm)) {
+                return confirm(buildRecalculateBudgetConfirmationQuestion(mapping, form, request, response), 
+                               CONFIRM_GENERATE_ALL_PERIODS, DO_NOTHING);
+            } else {
+                return confirmGenerateAllPeriods(mapping, form, request, response);
             }
-            /* calculate first period - only period 1 exists at this point */
-            getBudgetSummaryService().calculateBudget(budget);
-            /* generate all periods */
-            getBudgetSummaryService().generateAllPeriods(budget);
-
-            /* calculate all periods */
-            getBudgetSummaryService().calculateBudget(budget);
-            // reset the old start/end date if it is changed for some reason
-            getBudgetSummaryService().setupOldStartEndDate(budget, true);
         }
-        return mapping.findForward(Constants.MAPPING_BASIC);
+        return forward;
     }
 
+    public ActionForward confirmGenerateAllPeriods(ActionMapping mapping, ActionForm form, HttpServletRequest request,
+            HttpServletResponse response) throws Exception {
+        BudgetForm budgetForm = (BudgetForm) form;
+        Budget budget = budgetForm.getBudgetDocument().getBudget();
+        
+        if (StringUtils.isBlank(budgetForm.getPrevOnOffCampusFlag())
+                || !budget.getOnOffCampusFlag().equals(budgetForm.getPrevOnOffCampusFlag())) {
+            KcServiceLocator.getService(BudgetSummaryService.class).updateOnOffCampusFlag(budget,
+                    budget.getOnOffCampusFlag());
+        }
+        /* calculate first period - only period 1 exists at this point */
+        getBudgetSummaryService().calculateBudget(budget);
+        /* generate all periods */
+        getBudgetSummaryService().generateAllPeriods(budget);
+
+        /* calculate all periods */
+        getBudgetSummaryService().calculateBudget(budget);
+        // reset the old start/end date if it is changed for some reason
+        getBudgetSummaryService().setupOldStartEndDate(budget, true);
+        
+        return mapping.findForward(Constants.MAPPING_BASIC);
+    }
+    
     public ActionForward questionCalculateAllPeriods(ActionMapping mapping, ActionForm form, HttpServletRequest request,
             HttpServletResponse response) throws Exception {
         BudgetForm budgetForm = (BudgetForm) form;
@@ -396,7 +467,7 @@ public class BudgetSummaryAction extends BudgetAction {
     }
 
     /**
-     * 
+     *
      * This method builds a Opportunity Delete Confirmation Question as part of the Questions Framework
      * 
      * @param mapping
@@ -412,7 +483,6 @@ public class BudgetSummaryAction extends BudgetAction {
                 QUESTION_RECALCULATE_BUDGET_CONFIRMATION);
     }
 
-    @Override
     protected KualiRuleService getKualiRuleService() {
         return getService(KualiRuleService.class);
     }
@@ -420,9 +490,10 @@ public class BudgetSummaryAction extends BudgetAction {
     private void reconcileFinalBudgetFlags(BudgetForm budgetForm) {
         BudgetDocument budgetDocument = budgetForm.getBudgetDocument();
         Budget budget = budgetDocument.getBudget();
+        BudgetParentDocument parentDocument = budgetDocument.getParentDocument();
         if (budget.getFinalVersionFlag()) {
             // This version has been marked as final - update other versions.
-            for (BudgetDocumentVersion documentVersion : budget.getBudgetDocument().getParentDocument().getBudgetDocumentVersions()) {
+            for (BudgetDocumentVersion documentVersion : parentDocument.getBudgetDocumentVersions()) {
                 BudgetVersionOverview version = documentVersion.getBudgetVersionOverview();
                 if (!budget.getBudgetVersionNumber().equals(version.getBudgetVersionNumber())) {
                     version.setFinalVersionFlag(false);
@@ -467,7 +538,10 @@ public class BudgetSummaryAction extends BudgetAction {
         ScaleTwoDecimal totalIndirectCost = ScaleTwoDecimal.ZERO;
         ScaleTwoDecimal totalCost = ScaleTwoDecimal.ZERO;
         for (BudgetPeriod budgetPeriod : budget.getBudgetPeriods()) {
-            budgetPeriod.setTotalCost(budgetPeriod.getTotalDirectCost().add(budgetPeriod.getTotalIndirectCost()));
+            if (budgetPeriod.getTotalDirectCost().isGreaterThan(ScaleTwoDecimal.ZERO)
+                    || budgetPeriod.getTotalIndirectCost().isGreaterThan(ScaleTwoDecimal.ZERO)) {
+                budgetPeriod.setTotalCost(budgetPeriod.getTotalDirectCost().add(budgetPeriod.getTotalIndirectCost()));
+            }
             totalDirectCost = totalDirectCost.add(budgetPeriod.getTotalDirectCost());
             totalIndirectCost = totalIndirectCost.add(budgetPeriod.getTotalIndirectCost());
             totalCost = totalCost.add(budgetPeriod.getTotalCost());
@@ -479,17 +553,15 @@ public class BudgetSummaryAction extends BudgetAction {
     }
 
     private void updateThisBudgetVersion(BudgetDocument budgetDocument) {
-//        BudgetDocument budgetDocument = budget.getBudgetDocument();
-        Document parentDocument = budgetDocument.getParentDocument();
-        if(parentDocument==null){
-            budgetDocument.refreshReferenceObject("parentDocument");
-        }
-        for (BudgetDocumentVersion documentVersion : budgetDocument.getParentDocument().getBudgetDocumentVersions()) {
+        Budget budget = budgetDocument.getBudget();
+        BudgetParentDocument proposal = budgetDocument.getParentDocument();
+        
+        for (BudgetDocumentVersion documentVersion : proposal.getBudgetDocumentVersions()) {
             BudgetVersionOverview version = documentVersion.getBudgetVersionOverview();
-            Budget budget = budgetDocument.getBudget();
             if (budget.getBudgetVersionNumber().equals(version.getBudgetVersionNumber())) {
                 version.setFinalVersionFlag(budget.getFinalVersionFlag());
                 version.setBudgetStatus(budget.getBudgetStatus());
+                version.setModularBudgetFlag(budget.getModularBudgetFlag());
             }
         }
     }
@@ -524,8 +596,10 @@ public class BudgetSummaryAction extends BudgetAction {
      */
     private boolean isBudgetPeriodDateChanged(Budget budget) {
         for (BudgetPeriod budgetPeriod : budget.getBudgetPeriods()) {
-            if (budgetPeriod.getStartDate().compareTo(budgetPeriod.getOldStartDate()) != 0
-                    || budgetPeriod.getEndDate().compareTo(budgetPeriod.getOldEndDate()) != 0) {
+            if (budgetPeriod.getStartDate() != null && budgetPeriod.getOldStartDate() != null && 
+                    budgetPeriod.getEndDate() != null && budgetPeriod.getOldEndDate() != null && 
+                    (budgetPeriod.getStartDate().compareTo(budgetPeriod.getOldStartDate()) != 0
+                    || budgetPeriod.getEndDate().compareTo(budgetPeriod.getOldEndDate()) != 0)) {
                 return true;
             }
 
@@ -576,13 +650,11 @@ public class BudgetSummaryAction extends BudgetAction {
      */
     private boolean isLineItemErrorOnly() {
         if (!GlobalVariables.getMessageMap().hasNoErrors()) {
-
-            for (Iterator i = GlobalVariables.getMessageMap().getErrorMessages().entrySet().iterator(); i.hasNext();) {
-                Map.Entry e = (Map.Entry) i.next();
-
-                AutoPopulatingList errorList = (AutoPopulatingList) e.getValue();
-                for (Iterator j = errorList.iterator(); j.hasNext();) {
-                    ErrorMessage em = (ErrorMessage) j.next();
+            Map<String, ? extends List<ErrorMessage>> errors = GlobalVariables.getMessageMap().getErrorMessages();
+            for (Map.Entry<String, ? extends List<ErrorMessage>> entry : errors.entrySet()) {
+                Iterator<ErrorMessage> iter = entry.getValue().iterator();
+                while (iter.hasNext()) {
+                    ErrorMessage em = iter.next();
                     if (!em.getErrorKey().equals("error.lineItem.dateDoesNotmatch")) {
                         return false;
                     }
@@ -609,13 +681,13 @@ public class BudgetSummaryAction extends BudgetAction {
         BudgetForm budgetForm = (BudgetForm) form;
         BudgetDocument budgetDocument = budgetForm.getBudgetDocument();
         Budget budget = budgetDocument.getBudget();
-        String warningMessage = budget.getBudgetSummaryService().defaultWarningMessage(budget);
+        String warningMessage = getBudgetSummaryService().defaultWarningMessage(budget);
         
         if (StringUtils.isNotBlank(warningMessage)) {
             return confirm(buildDefaultBudgetPeriodsConfirmationQuestion(mapping, form, request, response,
                     warningMessage), CONFIRM_DEFAULT_BUDGET_PERIODS, "");
         } else {
-                budget.getBudgetSummaryService().defaultBudgetPeriods(budget);
+                getBudgetSummaryService().defaultBudgetPeriods(budget);
                 return mapping.findForward(Constants.MAPPING_BASIC);
         }
         
@@ -632,10 +704,37 @@ public class BudgetSummaryAction extends BudgetAction {
         BudgetForm budgetForm = (BudgetForm) form;
         BudgetDocument budgetDocument = budgetForm.getBudgetDocument();
         Budget budget = budgetDocument.getBudget();
-        budget.getBudgetSummaryService().defaultBudgetPeriods(budget);
-        budget.getBudgetSummaryService().adjustStartEndDatesForLineItems(budget);
+        getBudgetSummaryService().defaultBudgetPeriods(budget);
+        getBudgetSummaryService().adjustStartEndDatesForLineItems(budget);
         return mapping.findForward(Constants.MAPPING_BASIC);
     }
+    
+    public ActionForward refresh(ActionMapping mapping, ActionForm form, HttpServletRequest request,
+            HttpServletResponse response) throws Exception {
+        
+        BudgetForm budgetForm = (BudgetForm)form;
+        if (budgetForm.getLookupResultsBOClassName() != null && budgetForm.getLookupResultsSequenceNumber() != null) {
+            String lookupResultsSequenceNumber = budgetForm.getLookupResultsSequenceNumber();
+            
+            @SuppressWarnings("unchecked")
+            Class<BusinessObject> lookupResultsBOClass = (Class<BusinessObject>) Class.forName(budgetForm.getLookupResultsBOClassName());
+            
+            Collection<BusinessObject> rawValues = KcServiceLocator.getService(LookupResultsService.class)
+                .retrieveSelectedResultBOs(lookupResultsSequenceNumber, lookupResultsBOClass,
+                        GlobalVariables.getUserSession().getPerson().getPrincipalId());
+            
+            if (lookupResultsBOClass.isAssignableFrom(BudgetPeriod.class)) {
+            	String budgetPeriod = budgetForm.getLookedUpCollectionName();
+                getAwardBudgetService().copyLineItemsFromProposalPeriods(rawValues, 
+                        budgetForm.getBudgetDocument().getBudget().getBudgetPeriod(Integer.parseInt(budgetPeriod)));
+            }
+        }
+        return super.refresh(mapping, form, request, response);
+    }
+    
+    private AwardBudgetService getAwardBudgetService() {
+        return KcServiceLocator.getService(AwardBudgetService.class);
+    }    
 
     
 }
